# archcrawler

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
app/: CMakeLists.txt  app_config.h  list_dir_fs_service.h  load_file_fs_service.h  main.cpp  regex.cpp  regex.h
cmake/: print_target_properties.cmake
docs/: CMakeLists.txt
include/archcrawler/: archcrawler_config.h
include/archcrawler/file_list/: file_list_logger.h  i_dir_entry_predicate.h  i_list_dir_service.h  uc_file_extension_whitelist.h  uc_get_file_list.h  uc_path_beginswith_blacklist.h  uc_path_contains_blacklist.h
include/archcrawler/matchers/: i_create_abstract_matcher.h  i_iter.h  i_matcher.h  i_matcher_factory.h  i_register_matcher_factory.h  i_search_file_buf.h  i_search_in_file_buf_list.h  match.h  match_group.h  match_in_file.h  matcher_factory_registry.h  matchers_logger.h  uc_create_abstract_matcher.h  uc_register_matcher_factory.h  uc_search_file_buf.h  uc_search_in_file_buf_list.h  uc_search_regex_in_filebuf_list.h
include/archcrawler/memory_loader/: file_buf.h  i_load_file_service.h  memory_loader_logger.h  uc_load_file_list.h
include/lib1/: lib1.hpp
include/regscan/: dir_entry.h  get_file_list_uc.h  i_list_dir_service.h  i_path_predicate.h  regscan_config.h
include/regscan/file_list/: dir_black_list_uc.h  dir_entry.h  file_extension_whitelist_uc.h  file_list_logger.h  i_dir_entry_predicate.h  i_list_dir_service.h  path_beginswith_blacklist_uc.h  path_contains_blacklist_uc.h  uc_file_extension_whitelist.h  uc_get_file_list.h  uc_path_beginswith_blacklist.h  uc_path_contains_blacklist.h
include/regscan/matchers/: i_create_abstract_matcher.h  i_iter.h  i_match_iter.h  i_matcher.h  i_matcher_factory.h  i_register_matcher_factory.h  i_register_matcher_uc.h  i_search_file_buf.h  i_search_in_file_buf_list.h  match.h  match_in_file.h  matcher_builder_uc.h  matcher_factory_registry.h  matcher_registry.h  matchers_logger.h  register_matcher_uc.h  search_file_buf_uc.h  search_in_file_buf_list_uc.h  uc_create_abstract_matcher.h  uc_register_matcher_factory.h  uc_search_file_buf.h  uc_search_in_file_buf_list.h  uc_search_regex_in_filebuf_list.h
include/regscan/memory_loader/: file_buf.h  i_load_file_service.h  load_filelist_uc.h  memory_loader_logger.h  uc_load_file_list.h
src/: CMakeLists.txt  get_file_list_uc.cpp  lib1.cpp
src/file_list/: dir_black_list_uc.cpp  file_extension_whitelist_uc.cpp  get_file_list_uc.cpp  path_beginswith_blacklist_uc.cpp  path_contains_blacklist_uc.cpp  uc_file_extension_whitelist.cpp  uc_get_file_list.cpp  uc_path_beginswith_blacklist.cpp  uc_path_contains_blacklist.cpp
src/matchers/: search_file_buf_uc.cpp  search_in_file_buf_list_uc.cpp  uc_search_file_buf.cpp  uc_search_in_file_buf_list.cpp  uc_search_regex_in_filebuf_list.cpp
src/memory_loader/: load_file_list_uc.cpp  load_filelist_uc.cpp  uc_load_file_list.cpp
tests/: CMakeLists.txt
